# TRADERAGENT

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ALERT_CONFIGURATION_GUIDE_RU.md  ALMIR_Backtesting_Template.xlsx  ALMIR_FIBONACCI_STRATEGY_GUIDE_RU.md  ALMIR_INDICATOR_GUIDE_RU.md  BYBIT_PRODUCTION_SETUP.md  CLAUDE.md  CONFIGURATION.md  CONTINUE_SESSION_PROMPT.md  DATA_ENTRY_TEMPLATE.md  DCA_BOT_TRAILING_STOP_IMPLEMENTATION.md  DCA_GRID_BOT_DEVELOPMENT_PLAN.md  DEPLOYMENT_GUIDE_RU.md  Dockerfile  Dockerfile.exporter  FAQ.md  ISSUE_149_COMPARISON_AND_PLAN.md  ISSUE_85_EXECUTIVE_SUMMARY.md  ISSUE_85_EXECUTIVE_SUMMARY_RU.md  ISSUE_85_PROJECT_PROPOSAL.md  ISSUE_85_PROJECT_PROPOSAL_RU.md  PINE_SCRIPT_AUDIT.md  QUICK_START_CHECKLIST_RU.md  README.md  ROADMAP.md  SPREADSHEET_USER_GUIDE_RU.md  STRATEGY_PARAMETERS_TEMPLATE.md  SUB_ISSUES_TEMPLATES.md  SUB_ISSUES_TEMPLATES_RU.md  TESTING.md  TESTING_MATRIX.md  TESTING_PROCESS_GUIDE_RU.md  UNIVERSAL_INDICATOR_ANALYSIS.md  UNIVERSAL_INDICATOR_GUIDE_RU.md  VISUALIZATION_IMPROVEMENTS.md  add_bybit_credentials.py  add_sample_data.py  (+15 more)
alembic/: env.py
backtesting-module/: .gitignore  Dockerfile  README.md  package.json
bot/: README.md  __init__.py  main.py
ci-logs/: errors-summary.txt
configs/: example.yaml  phase7_demo.yaml  trend_follower_production.yaml
data/: XRP_USDT_5m.json  replay_report_1y.json
dca_grid_bot/: .gitignore  README.md  __init__.py  requirements.txt
docs/: ACTION_PLAN_ISSUE_79.md  ARCHITECTURE-TRADERAGENT v2.0.md  ARCHITECTURE-TRADERAGENT v2.1.md  ARCHITECTURE-TRADERAGENT v2.2.md  ARCHITECTURE.md  ARCHITECTURE2.md  BACKTESTING_SYSTEM_ARCHITECTURE.md  BACKTEST_PLAN_DCA_TF_SMC.md  BACKTEST_PROMPT.md  BYBIT_DEMO_TRADING_SOLUTION.md  CRYPTO_PAIRS_LIST.md  DEPLOYMENT.md  GITHUB_ISSUES_SUMMARY.md  GRID_BACKTESTING_ARCHITECTURE.md  HISTORICAL_DATA.md  ROADMAP.md  SESSION_CONTEXT.md  SESSION_CONTEXT1.md  SESSION_CONTEXT_QUICK.md  SMC_INTEGRATION_PLAN.md  STRATEGY_ALGORITHMS.md  TESTING_CHECKLIST_TEMPLATE.md  TRADERAGENT_V2_ALGORITHM.md  TRADERAGENT_V2_PLAN.md  TROUBLESHOOTING.md  analysis.md  architecture_backtest.md  architecture_bot.md  architecture_comparison.md  index.html  plan.md
examples/: trend_follower_example.py
experiments/: adaptive_filtering_issue71_test.pine  almir_fibonacci_strategy_test.pine  almir_indicator_analysis.md  analysis.md  candlestick_patterns_issue70_test.pine  fibonacci_trading_strategy.md  fix_explanation.md  rsiv_step_screenshot_analysis.md  traforetto_visualization_test.pine  universal_indicator_v2_test.pine  volume_momentum_issue67_test.pine
indicators/: README.md  README_BGAKKCLOD_V3.md  almir_fibonacci_strategy.pine  almir_fibonacci_strategy_enhanced.pine  almir_indicator.pine  almir_indicator_overlay.pine  bgakkclod_v2_indicator.pine  bgakkclod_v3_indicator.pine  bgakkclod_v3_panel.pine  (+7 more)
services/backtesting/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
services/backtesting/src/grid_backtester/: __init__.py
services/backtesting/src/grid_backtester/api/: __init__.py  app.py  auth.py  routes.py
services/backtesting/src/grid_backtester/caching/: __init__.py  indicator_cache.py
services/backtesting/src/grid_backtester/core/: __init__.py  calculator.py  config.py  market_simulator.py  order_manager.py  risk_manager.py
services/backtesting/src/grid_backtester/engine/: __init__.py  clusterizer.py  models.py  optimizer.py  reporter.py  simulator.py  system.py
services/backtesting/src/grid_backtester/logging/: __init__.py  logger.py
services/backtesting/src/grid_backtester/persistence/: __init__.py  checkpoint.py  job_store.py  preset_store.py
services/backtesting/src/grid_backtester/trailing/: __init__.py  manager.py
services/backtesting/src/grid_backtester/visualization/: __init__.py  charts.py
services/backtesting/tests/: conftest.py
services/backtesting/tests/api/: test_api.py
services/backtesting/tests/caching/: test_indicator_cache.py
services/backtesting/tests/core/: test_calculator.py  test_config.py  test_order_manager.py  test_risk_manager.py
services/backtesting/tests/engine/: test_clusterizer.py  test_optimizer.py  test_simulator.py  test_system.py
services/backtesting/tests/persistence/: test_checkpoint.py  test_job_store.py  test_preset_store.py
services/backtesting/tests/trailing/: test_trailing_manager.py
services/backtesting/tests/visualization/: test_charts.py
(+449 files in other folders)
